--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prestart": "webpack ",
-    "start": "nodemon ./build/roux-meet.bundle.js"
+    "prestart": "",
+    "start": "webpack --w"
   },
   "repository": {
     "type": "git",
@@ -37,7 +37,7 @@
     "lodash": "^4.17.4",
     "morgan": "^1.8.2",
     "mssql": "^4.0.4",
-    "nodemon": "^1.12.0",
+    "nodemon": "^1.12.1",
     "serve-favicon": "^2.4.3"
   },
   "devDependencies": {
@@ -49,10 +49,10 @@
     "@types/morgan": "^1.7.32",
     "@types/node": "^8.0.19",
     "@types/serve-favicon": "^2.2.28",
-    "nodemon-webpack-plugin": "^0.1.2",
     "ts-loader": "^2.3.2",
     "typescript": "^2.4.2",
     "webpack": "^3.4.1",
-    "webpack-node-externals": "^1.6.0"
+    "webpack-node-externals": "^1.6.0",
+    "webpack-shell-plugin": "^0.5.0"
   }
 }
