--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "morgan": "^1.8.2",
     "mssql": "^4.0.4",
     "nodemon": "^1.12.1",
-    "serve-favicon": "^2.4.3"
+    "serve-favicon": "^2.4.3",
+    "socket.io": "^2.0.3"
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.4",
@@ -49,6 +50,7 @@
     "@types/morgan": "^1.7.32",
     "@types/node": "^8.0.19",
     "@types/serve-favicon": "^2.2.28",
+    "@types/socket.io": "^1.4.30",
     "ts-loader": "^2.3.2",
     "typescript": "^2.4.2",
     "webpack": "^3.4.1",
